Changed place of default page and added empty Portfolio page

--- a/Default.html
+++ b/Default.html
@@ -77,14 +77,11 @@
                                                 </a>
                                                 <div class="dropdown-menu" aria-labelledby="navbarDropdownSocialMedia">
                                                         <a class="dropdown-item"
-                                                                href="https://steamcommunity.com/id/Saeedo1998"
-                                                                target="_blank">Steam</a>
+                                                                href="https://www.linkedin.com/in/saeed-badghaish-0045a7190/"
+                                                                target="_blank">LinkedIn</a>
                                                         <a class="dropdown-item"
-                                                                href="https://www.youtube.com/channel/UCL4kxYr04pHtWTAG7DGc1mg"
-                                                                target="_blank">Youtube</a>
-                                                        <a class="dropdown-item"
-                                                                href="https://www.instagram.com/saeedo1998/"
-                                                                target="_blank">Instagram</a>
+                                                                href="https://github.com/Saeedo1998"
+                                                                target="_blank">GitHub</a>
                                                         <!-- <div class="dropdown-divider"></div> -->
                                                 </div>
                                         </li>
