--- a/Index.html
+++ b/Index.html
@@ -2,7 +2,7 @@
 
 <head>
         <title>
-                Hello there
+                Saeedo_98
         </title>
 
         <link rel="stylesheet" type="text/css" href="../Fonts/stylesheet.css" />
@@ -53,14 +53,16 @@
                         <ul class="navbar-nav mr-auto">
                                 <li class="nav-item active">
                                         <a class="nav-link active" href="#">Home
-                                                <!--<span class="sr-only">(current)</span>--></a>
+                                                <!--<span class="sr-only">(current)</span>-->
+                                        </a>
                                 </li>
                                 <li class="nav-item">
                                         <a class="nav-link disabled" href="Pages/Portfolio.html"> <span
-                                                        class="glyphicon glyphicon-film"></span> Portfolio (coming soon..) </a>
+                                                        class="glyphicon glyphicon-film"></span> Portfolio (coming
+                                                soon..) </a>
                                 </li>
 
-                               
+
                         </ul>
                         <form class="form-inline my-2 my-lg-0">
                                 <!--search-->
@@ -79,8 +81,7 @@
                                                         <a class="dropdown-item"
                                                                 href="https://www.linkedin.com/in/saeed-badghaish-0045a7190/"
                                                                 target="_blank">LinkedIn</a>
-                                                        <a class="dropdown-item"
-                                                                href="https://github.com/Saeedo1998"
+                                                        <a class="dropdown-item" href="https://github.com/Saeedo1998"
                                                                 target="_blank">GitHub</a>
                                                         <!-- <div class="dropdown-divider"></div> -->
                                                 </div>
@@ -92,7 +93,7 @@
         <div class="container">
 
 
-                
+
                 <div class="row">
                         <div class="col-md-4">
 
