Changed location of social media buttons from dropdownlist to standalone buttons

--- a/Index.html
+++ b/Index.html
@@ -20,7 +20,7 @@
                 body {
                         background-color: #3F5369;
                         /*background-image: url('Images/wallpaper.jpg');*/
-                        background-image: url('../Images/Image (15).png');
+                        background-image: url('Images/Image (15).png');
                         font-family: 'Teko';
                         font-size: 28px;
                 }
@@ -70,7 +70,7 @@
 				<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button> -->
                                 <!-- Social media dropdown -->
                                 <ul class="navbar-nav mr-auto">
-                                        <li class="nav-item dropdown">
+                                        <!-- <li class="nav-item dropdown">
                                                 <a class="nav-link dropdown-toggle" href="#"
                                                         id="navbarDropdownSocialMedia" role="button"
                                                         data-toggle="dropdown" aria-haspopup="true"
@@ -82,9 +82,19 @@
                                                                 href="https://www.linkedin.com/in/saeed-badghaish-0045a7190/"
                                                                 target="_blank">LinkedIn</a>
                                                         <a class="dropdown-item" href="https://github.com/Saeedo1998"
-                                                                target="_blank">GitHub</a>
+                                                                target="_blank">GitHub</a> -->
                                                         <!-- <div class="dropdown-divider"></div> -->
-                                                </div>
+                                                <!-- </div>
+                                        </li> -->
+                                        <li class="nav-item">
+                                                <a class="nav-link" target="_blank" href="https://www.linkedin.com/in/saeed-badghaish-0045a7190/"> 
+                                                        <span class="glyphicon glyphicon-film"></span> LinkedIn </a>
+                                                        
+                                        </li>
+                                        <li class="nav-item">
+                                                <a class="nav-link" target="_blank" href="https://github.com/Saeedo1998"> 
+                                                        <span class="glyphicon glyphicon-film"></span> GitHub </a>
+                                                        
                                         </li>
                                 </ul>
                         </form>
