Changed background color to white. Changed header font family from Broadway to 'Broadway'

--- a/Index.html
+++ b/Index.html
@@ -18,7 +18,8 @@
 
         <style>
                 body {
-                        background-color: #3F5369;
+                        background-color: white;
+                        /* background-color: #3F5369; */
                         /*background-image: url('Images/wallpaper.jpg');*/
                         background-image: url('Images/Image (15).png');
                         font-family: 'Teko';
@@ -35,8 +36,9 @@
                 }
 
                 .header {
-                        font-family: Broadway;
+                        font-family: 'Broadway';
                 }
+
         </style>
 </head>
 
