Added font weight (unused)

--- a/Index.html
+++ b/Index.html
@@ -26,6 +26,7 @@
                         background-image: url('Images/Image (15).png');
                         font-family: 'Teko';
                         /* font-family: 'Roboto Mono', monospace; */
+                        /* font-weight: 600; */
                         font-size: 24px;
                 }
 
