--- a/Index.html
+++ b/Index.html
@@ -2,7 +2,7 @@
 
 <head>
         <title>
-                Saeedo_98
+                Saeed Badghaish - Home
         </title>
 
         <link rel="stylesheet" type="text/css" href="../Fonts/stylesheet.css" />
@@ -44,7 +44,7 @@
 
 <body>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                <a class="navbar-brand" href="#">Saeedo_98</a>
+                <a class="navbar-brand" href="#">Saeed Badghaish</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse"
                         data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
