Redirect to homepage if Portfolio.html is loaded

--- a/Pages/Portfolio.html
+++ b/Pages/Portfolio.html
@@ -14,6 +14,12 @@
 
     <link href="https://fonts.googleapis.com/css2?family=Teko&display=swap" rel="stylesheet">
 
+    <script type="text/JavaScript">
+    window.onload = function() {
+    location.href = "https://www.saeedo98.com/";
+}
+
+    </script>
 
     <style>
         body {
@@ -44,7 +50,8 @@
         .container {
             width: 75%;
         }
-        hr{
+
+        hr {
             border-top: 1px solid black;
         }
     </style>
@@ -126,11 +133,14 @@
         </div>
 
         <br>
+
         <div class="header text-center">
             <h1> Portfolio </h1>
         </div>
+
         <br />
         <br />
+
         <div class="about-section">
             <div class="subHeader text-left">
                 About
@@ -139,14 +149,26 @@
                 Full Stack Developer based in Jeddah, Saudi Arabia. Working in ASP.NET C# web form development
             </div>
         </div>
-        
+
         <hr>
         <br>
+
         <div class="about-section">
             <div class="subHeader text-left">
                 Skills
             </div>
+            Web Development - Programming - C# - Java - JavaScript
         </div>
+
+        <hr>
+        <br>
+
+        <div class="about-section">
+            <div class="subHeader text-left">
+                Work
+            </div>
+        </div>
+
     </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
