--- a/Pages/Portfolio.html
+++ b/Pages/Portfolio.html
@@ -14,12 +14,7 @@
 
     <link href="https://fonts.googleapis.com/css2?family=Teko&display=swap" rel="stylesheet">
 
-    <script type="text/JavaScript">
-    window.onload = function() {
-    location.href = "https://www.saeedo98.com/";
-}
-
-    </script>
+    <script src="../Script.js"></script>
 
     <style>
         body {
