Properly redirects to home page now

--- a/Pages/Portfolio.html
+++ b/Pages/Portfolio.html
@@ -52,7 +52,7 @@
     </style>
 </head>
 
-<body>
+<body onload="redirectToHome()">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">Saeedo_98</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
