--- a/Index.html
+++ b/Index.html
@@ -69,7 +69,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav mr-auto">
                                 <li class="nav-item">
-                                        <a id="HomeLink" onclick="activeHome()" class="nav-link" href="#">Home
+                                        <a id="HomeLink" onclick="activeHome()" class="nav-link active" href="#">Home
                                                 <!--<span class="sr-only">(current)</span>-->
                                         </a>
                                 </li>
