Added blur to body container

--- a/Index.html
+++ b/Index.html
@@ -44,6 +44,12 @@
                 .header {
                         font-family: 'Broadway';
                 }
+
+                .container{
+                        background-color: #ffffff10;
+                        backdrop-filter: blur(7px);
+                        -webkit-backdrop-filter: blur(7px);
+                }
         </style>
 
         <!-- old scrapped code, moved to Script.js -->
@@ -148,6 +154,11 @@
                         <br />
                 </div>
 
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
 
         </div>
 
