Changed Portfolio page location

--- a/Portfolio.html
+++ b/Portfolio.html
@@ -51,7 +51,7 @@
     </style>
 </head>
 
-<body onload="redirectToHome()">
+<body onload="redirectToHome()" on>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">Saeedo_98</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -62,7 +62,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="../Index.html">Home
+                    <a class="nav-link" href="Index.html">Home
                         <!-- <span class="sr-only">(current)</span> -->
                     </a>
                 </li>
