Fixed navigation links

--- a/Portal.html
+++ b/Portal.html
@@ -163,12 +163,12 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav mr-auto">
                                 <li class="nav-item">
-                                        <a id="HomeLink" onclick="activeHome()" class="nav-link active" href="#">Home
+                                        <a id="HomeLink" onclick="activeHome()" class="nav-link active" href="Index.html">Home
                                                 <!--<span class="sr-only">(current)</span>-->
                                         </a>
                                 </li>
                                 <li class="nav-item">
-                                        <a class="nav-link disabled" href="Pages/Portfolio.html"> <span
+                                        <a class="nav-link disabled" href="Portfolio.html"> <span
                                                         class="glyphicon glyphicon-film"></span> Portfolio (coming
                                                 soon..) </a>
                                 </li>
