--- a/Index.html
+++ b/Index.html
@@ -2,7 +2,7 @@
 
 <head>
         <title>
-        
+
         </title>
 
         <link rel="stylesheet" type="text/css" href="../Fonts/stylesheet.css" />
@@ -37,46 +37,52 @@
                         /* font-weight: 600; */
                 }
 
-                nav{
-                        font-size: 24px;  
+                nav {
+                        font-size: 24px;
 
                 }
-                nav a{
+
+                nav a {
                         color: #ebebeb;
                 }
-                nav a:hover{
+
+                nav a:hover {
                         color: #acacac;
 
                 }
-                nav a:active{
+
+                nav a:active {
                         color: #d6d6d6;
 
                 }
 
                 /* whole body except nav */
-                .parentContainer{
+                .parentContainer {
                         font-size: 35px;
 
                 }
 
-                .navbar-brand{
+                .navbar-brand {
                         color: #ebebeb;
                 }
-                .navbar-custom .navbar-custom .navbar-text .navbar-dark{
+
+                .navbar-custom .navbar-custom .navbar-text .navbar-dark {
                         background-color: #ffffff56;
                         /* color: black; */
                         backdrop-filter: blur(7px);
                         -webkit-backdrop-filter: blur(7px);
 
                 }
+
                 .custom-toggler .navbar-toggler-icon {
                         /* background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255,102,203, 0.5)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E"); */
                         background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(235,235,235, 0.5)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
                 }
+
                 .custom-toggler.navbar-toggler {
                         /* border-color: rgb(255,102,203); */
                         border-color: #ebebeb90;
-                } 
+                }
 
                 .container {
 
@@ -101,8 +107,13 @@
                         .header {
                                 font-size: 135%;
                         }
-                        .subHeader{
-                                font-size: 80%; 
+
+                        .subHeader {
+                                font-size: 80%;
+                        }
+
+                        .content {
+                                font-size: 70%;
                         }
                 }
 
@@ -117,8 +128,13 @@
                                 /* font-size: 34px;   */
                                 font-size: 150%;
                         }
-                        .subHeader{
-                                font-size: 80%; 
+
+                        .subHeader {
+                                font-size: 80%;
+                        }
+
+                        .content {
+                                font-size: 70%;
                         }
                 }
         </style>
@@ -151,7 +167,7 @@
                                         </a>
                                 </li>
                                 <li class="nav-item">
-                                        <a class="nav-link disabled" href="Pages/Portfolio.html"> <span
+                                        <a class="nav-link disabled" href="Portfolio.html"> <span
                                                         class="glyphicon glyphicon-film"></span> Portfolio (coming
                                                 soon..) </a>
                                 </li>
@@ -216,7 +232,7 @@
                         </div>
                         <br>
                         <div class="header text-center">
-                                Welcome
+                                <i>"ARE YOU STILL THERE?"</i>
                         </div>
                         <br />
 
@@ -228,10 +244,19 @@
                                 <div class=subHeader>
                                         I am a Full Stack Web Developer
                                 </div>
+                                <br>
+                                <span class="content">
+                                        I do Web Development (Programming & Design), and in my free time I do Video
+                                        & Image Editing and also sometimes 3D Modeling.
+                                        <br>
+                                        <br>
+                                </span>
+                                <div class="subHeader">
+                                        Some of my work:
+                                </div>
                         </div>
 
-                        <br>
-                        <br>
+
                         <br>
                         <br>
                         <br>
