Added skills section

--- a/Index.html
+++ b/Index.html
@@ -98,6 +98,33 @@
                         /* font-family: 'Broadway'; */
                 }
 
+                .about {
+                        width: 80%;
+                }
+
+                .oval {
+                        /* background: #363636 none repeat scroll 0 0; */
+                        border: 2px solid #ebebeb;
+                        border-radius: 80px 80px;
+                        display: inline;
+                        margin-left: auto;
+                        margin-right: 20px;
+                        margin-top: 100px;
+                        margin-bottom: 50px;
+                        padding-left: 10px;
+                        padding-right: 10px;
+                        padding-top: 5px;
+                        padding-bottom: 5px;
+                }
+
+                hr {
+                        background-color: #ebebeb;
+                }
+
+                .temp {
+                        display: none;
+                }
+
                 /* If the screen size is 601px wide or more */
                 @media screen and (min-width: 601px) {
                         .container {
@@ -232,29 +259,61 @@
                         </div>
                         <br>
                         <div class="header text-center">
-                                <i>"ARE YOU STILL THERE?"</i>
+                                <i>Hello</i>
                         </div>
                         <br />
 
                         <br />
-                        <div class="text-center">
+                        <div class="text-center temp">
 
                                 My name is Saeed Badghaish
                                 <br />
                                 <div class=subHeader>
-                                        I am a Full Stack Web Developer
+                                        I am a Web Developer / Programmer
                                 </div>
                                 <br>
-                                <span class="content">
-                                        I do Web Development (Programming & Design), and in my free time I do Video
-                                        & Image Editing and also sometimes 3D Modeling.
-                                        <br>
-                                        <br>
-                                </span>
-                                <div class="subHeader">
-                                        Some of my work:
+                                <div>
+                                        <span class="content">
+                                                I do Web Development (Programming & Design), and in my free time I do
+                                                Video
+                                                & Image Editing and also sometimes 3D Modeling.
+                                                <br>
+                                                <br>
+                                        </span>
+                                        <span class="subHeader">
+                                                Some of my work:
+                                        </span>
+
+                                </div>
+
+                        </div>
+                        <div class="about container-fluid">
+                                <div class="text-left">
+                                        <span class="header">Skills</span>
+                                        <br/>
+
+                                        <div class="subHeader">
+                                                <div class="oval">
+                                                        Web Development
+                                                </div>
+                                                <div class="oval">
+                                                        Programming
+                                                </div>
+                                                <div class="oval">
+                                                        C#
+                                                </div>
+                                                <div class="oval">
+                                                        Java
+                                                </div>
+                                                <div class="oval">
+                                                        JavaScript
+                                                </div>
+
+                                        </div>
                                 </div>
                         </div>
+                        <br>
+                        <hr>
 
 
                         <br>
