--- a/Index.html
+++ b/Index.html
@@ -121,7 +121,7 @@
                         background-color: #ebebeb;
                 }
 
-                .temp {
+                .hidden {
                         display: none;
                 }
 
@@ -259,20 +259,20 @@
                         </div>
                         <br>
                         <div class="header text-center">
-                                <i>Hello</i>
+                                <i>Welcome</i>
                         </div>
                         <br />
 
                         <br />
-                        <div class="text-center temp">
+                        <div class="text-center">
 
                                 My name is Saeed Badghaish
                                 <br />
                                 <div class=subHeader>
-                                        I am a Web Developer / Programmer
+                                        I am a Full Stack Web Developer / Programmer
                                 </div>
                                 <br>
-                                <div>
+                                <div class="hidden">
                                         <span class="content">
                                                 I do Web Development (Programming & Design), and in my free time I do
                                                 Video
@@ -287,7 +287,7 @@
                                 </div>
 
                         </div>
-                        <div class="about container-fluid">
+                        <div class="about container-fluid hidden">
                                 <div class="text-left">
                                         <span class="header">Skills</span>
                                         <br/>
@@ -313,12 +313,11 @@
                                 </div>
                         </div>
                         <br>
-                        <hr>
+                        <br>
+                        <br>
+                        <br>
 
 
-                        <br>
-                        <br>
-                        <br>
 
                 </div>
         </div>
