Tweaked navigation colors, also added text shadow to highlight selection and navigation

--- a/Index.html
+++ b/Index.html
@@ -47,13 +47,20 @@
                 }
 
                 nav a:hover {
-                        color: #acacac;
+                        color: #ffffff;
+                        /* color: #acacac; */
+                        text-shadow: 0px 0px 15px #acacac;
+
 
                 }
 
                 nav a:active {
                         color: #d6d6d6;
+                }
 
+                .active {
+                        color: #ffffff;
+                        text-shadow: 0px 0px 15px #acacac;
                 }
 
                 /* whole body except nav */
@@ -197,6 +204,10 @@
                                         <a class="nav-link disabled" href="Portfolio.html"> <span
                                                         class="glyphicon glyphicon-film"></span> Portfolio (coming
                                                 soon..) </a>
+                                </li>
+                                <li class="nav-item">
+                                        <a class="nav-link" href="css-playground.html">
+                                                 CSS Playground </a>
                                 </li>
 
 
