Moved css into Style.css

--- a/Portfolio.html
+++ b/Portfolio.html
@@ -15,40 +15,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Teko&display=swap" rel="stylesheet">
     <script src="../Script.js"></script>
 
-    <style>
-        body {
-            background-color: #3F5369;
-            /*background-image: url('Images/wallpaper.jpg');*/
-            background-image: url('../Images/Image (15).png');
-            font-family: 'Teko';
-            font-size: 24px;
-        }
+    <link rel="stylesheet" href="Style.css">
 
-        #rapture1 {
-            border: 7px outset #808080;
-        }
-
-        img {
-            max-width: 100%;
-            height: auto;
-        }
-
-        .header {
-            font-family: Broadway;
-        }
-
-        .subHeader {
-            font-size: 52px;
-        }
-
-        .container {
-            width: 75%;
-        }
-
-        hr {
-            border-top: 1px solid black;
-        }
-    </style>
 </head>
 
 <body onload="redirectToHome()" on>
