Adjust gradient canvas size

--- a/css-playground.html
+++ b/css-playground.html
@@ -142,8 +142,9 @@
                                 <div class="row">
                                         <div class="col-6">
                                                 Black To Blue Gradient
-                                                <div class="gradientBlackToBlue">
+                                                <div class="">
                                                 </div>
+                                                <canvas class="gradientBlackToBlue"></canvas>
 
                                                 <div class="subHeader">
                                                         CSS:
