Adjusted columns and rows for better positioning

--- a/css-playground.html
+++ b/css-playground.html
@@ -142,8 +142,13 @@
                                 <div class="row">
                                         <div class="col-6">
                                                 Black To Blue Gradient
-                                                <div class="">
-                                                </div>
+                                        </div>
+                                        <div class="col-6">
+                                                Black To Blue - 50% Opacity
+                                        </div>
+                                </div>
+                                <div class="row">
+                                        <div class="col-6">
                                                 <canvas class="gradientBlackToBlue"></canvas>
 
                                                 <div class="subHeader">
@@ -159,13 +164,9 @@
                                                         </button>
                                                         
                                                 </div>
-
-
                                         </div>
                                         <div class="col-6">
-                                                Black To Blue - 50% Opacity
-                                                <div class="gradientBlackToBlueOpacity-50">
-                                                </div>
+                                                <canvas class="gradientBlackToBlueOpacity-50"></canvas>
 
                                                 <div class="subHeader">
                                                         CSS:
